# mini_market

./: main.py  pyproject.toml
src/controllers/: main_controller.py
src/models/: model_product.py
src/utils/: utils_helper.py
src/views/: menu_view.py
tests/: test.py
